2004-12-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Small song deletion optimization.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	Hopefully fix #160887.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Center on playing song.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Keep selection when deleting multiple items.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_select_first),
	(pointer_list_view_select_next), (pointer_list_view_select_prev),
	(pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Saner scrolling behaviour.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Fix braindead shuffle algo.

2004-12-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	* data/images/muine-volume-max.png:
	* data/images/muine-volume-medium.png:
	* data/images/muine-volume-min.png:
	* data/images/muine-volume-zero.png:
	* src/Makefile.am:
	* src/StockIcons.cs:
	* src/VolumeButton.cs:

	Put volume icons back for now.

2004-12-13  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Only one tooltip for the play button.

2004-12-13  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:
	* src/StockIcons.cs:

	Use GtkActions API (needs gtk# CVS). Also change play button
	to be a big toggle button, easier to hit.
	
	* data/muine.schemas.in:

	Nicer default window sizes.

2004-12-10  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Update README to reflect change in Gtk# requirements.

2004-12-08  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in: